Fixed alignment of treatment names in icons view

--- a/src/mcode-pilot/components/TreatmentOptionsOutcomesIcons/TreatmentOptionsOutcomesIcons.scss
+++ b/src/mcode-pilot/components/TreatmentOptionsOutcomesIcons/TreatmentOptionsOutcomesIcons.scss
@@ -130,4 +130,5 @@
     .flex-2 { flex: 2; }
     .flex-3 { flex: 3; }
     .flex-padding { padding: 0 20px; }
+    .flex-center { align-items: center; }
 }
